Update pom.xml
All dependencies, versions updated and more